# cli

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: ci.yml  update-emojis.yml
assets/schemes/svelte/default/: dark.txt
assets/templates/: btop.theme  nvtop.colors  qtct.conf  qtlight.colors  warp.yaml
completions/: _vela  vela.fish
src/: cmds.rs  hypr.rs  languages.rs  main.rs  notify.rs  paths.rs  scheme.rs  theme.rs  util.rs  wallpaper.rs
src/vela/: __init__.py  parser.py
src/vela/data/templates/: cava.conf  fuzzel.ini  gtk.css  helix.toml  htop.theme  qtdark.colors  vscode-theme.json
src/vela/subcommands/: clipboard.py  emoji.py  record.py  resizer.py  scheme.py  screenshot.py  shell.py  toggle.py  wallpaper.py
src/vela/utils/: color.py  colorfulness.py  logging.py  notify.py  paths.py  scheme.py  theme.py  version.py  wallpaper.py
src/vela/utils/material/: __init__.py  generator.py  score.py
