[package]
name = "vela"
version = "0.1.0"
edition = "2021"
description = "Vela CLI (Rust)"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
which = "6.0"
thiserror = "1.0"
walkdir = "2.5"
once_cell = "1.19"
regex = "1.10"
time = { version = "0.3", features = ["formatting"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
url = "2.5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "tiff"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tempfile = "3.10"
socket2 = { version = "0.5", features = ["all"] }
humantime = "2.1"
