[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vela"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "pillow",
    "materialyoucolor"
]

[project.scripts]
vela = "vela:main"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 120